# rag_init_pj

./: .gitignore  Dockerfile  pyproject.toml
src/: app.py  qa_chain.py
